# opengpts

./: Dockerfile
backend/: pyproject.toml
backend/app/auth/: handlers.py  settings.py
